--- a/less/home-page.less
+++ b/less/home-page.less
@@ -56,6 +56,21 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
+
     }
   }
 }// home
+
+.container.home {
+  .header-text {
+    padding: 11px 0;
+    border-bottom: 2px dashed #c0c0c0;
+  }
+
+}
+
+.btn {
+  .custom-btn(190px, 45px, #008080, white)
+  
+ 
+}
