--- a/css/index.css
+++ b/css/index.css
@@ -168,6 +168,30 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+.main-header {
+  display: flex;
+  justify-content: space-between;
+  margin: 30px 0;
+  border-bottom-width: 100%;
+}
+.main-header ul {
+  display: inline-flex;
+  justify-content: center;
+  align-content: center;
+}
+.main-header ul li {
+  margin: 10px 17px;
+  font-size: 1.7rem;
+}
+.main-header ul li a {
+  text-decoration: none;
+}
+@media (max-width: 500px) {
+  .main-header {
+    width: 100%;
+    background: blue;
+  }
+}
 .footer {
   width: 100%;
   border-top: 2px dashed silver;
@@ -224,4 +248,27 @@ img {
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+.container.home .header-text {
+  padding: 11px 0;
+  border-bottom: 2px dashed #c0c0c0;
+}
+.btn {
+  width: 190px;
+  height: 45px;
+  background-color: #008080;
+  color: white;
+  border: 1px solid black;
+  display: inline-flex;
+  justify-content: center;
+  align-content: center;
+  border-radius: 15px;
+  cursor: pointer;
+  margin: 20px 0;
+  font-size: 1.8em;
+  padding-top: 11px;
+}
+.btn:hover {
+  background-color: white;
+  color: #008080;
 }
