--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,30 @@
 // Mixins in here
+
+.center() {
+    display: inline-flex;
+    justify-content: center;
+    align-content: center;
+}
+
+.t(@color) {
+    border: 2px solid @color;
+}
+
+.custom-btn(@width, @height, @bgcolor, @font-color) {
+    width: @width;
+    height: @height;
+    background-color: @bgcolor;
+    color: @font-color;
+    border: 1px solid black;
+    .center;
+    border-radius: 15px;
+    cursor: pointer;
+    margin: 20px 0;
+    font-size: 1.8em;
+    padding-top: 11px;
+    
+    &:hover {
+      background-color: @font-color;
+      color: @bgcolor;
+    }
+  }
