--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,28 @@
 // Navigation Styles here
+
+.main-header {
+    display: flex;
+    justify-content: space-between;
+    margin: 30px 0;
+    border-bottom-width: 100%;
+    // .t(lightcoral);
+
+    ul {
+        .center();
+        li{
+            margin: 10px 17px;
+            font-size: 1.7rem;
+            a{
+                text-decoration: none;
+            }
+        }
+    }
+}
+
+.main-header{
+    @media @mobile {
+        width: 100%;
+        background: blue;
+        
+    }
+}
