--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,8 +3,13 @@
 .main-header {
     display: flex;
     justify-content: space-between;
-    margin: 30px 0;
+    margin: 30px 0 0 0;
     border-bottom-width: 100%;
+    width: 100%;
+    border-bottom: 2px dashed silver;
+    padding-bottom: 20px;
+    padding-right: 75px;
+    padding-left: 60px;
     // .t(lightcoral);
 
     ul {
@@ -19,10 +24,4 @@
     }
 }
 
-.main-header{
-    @media @mobile {
-        width: 100%;
-        background: blue;
-        
-    }
-}
+
